--- a/especialistas-web/src/main/webapp/src/modules/citas/create/citas.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/create/citas.create.html
@@ -1,37 +1,17 @@
-<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-<div class="container-fluid">
-    <div class="panel-group">
-        <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createCita">Agregar cita</label>
-                <label ng-if="edit" id="editCita">Editar Información</label></div>
-            <div class="panel-body">
-                <form ng-submit="createCita()" name="cita">
-                    <div class="form-group">
-                        <label for="comentarios">Comentarios</label>
-                        <input id="comentarios" required ng-model="comentarios" class="form-control"/>
-                    </div>
-                        <div class="form-group">
-                        <label for="horaNueva">Hora</label>
-                        <select class="form-control" id="horaNueva" required ng-model="horaNueva">
-                            <option ng-repeat="hora in horas" value={{hora}}>{{hora.horaInicio}}-{{hora.horaFin}} </option>
-                        </select>
-                    </div>
-                   <div class="form-group" ng-if="!cita.$valid">
-                        <div class="alert alert-warning" >
-                            <strong>Atención!</strong><p>Todos los campos son obligatorios</p>
-                        </div> 
-                    </div> 
-                    <div class="form-group row">
-                        <div class="form-group col-sm-12">
-                            <input ng-show="cita.$valid" type="submit" value="Guardar" class="btn btn-success"/>
-                            <a ng-if="!edit" class="btn btn-info" ui-sref="citasList">Cancelar</a>
-                            <a ng-if="edit" class="btn btn-info" ui-sref="citasList">Cancelar</a>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+<form ng-submit="createCita()" name="cita">
+
+    <div class="form-group">
+        <label for="comentarios">Comentarios</label>
+        <input class="form-control" id="hospitalName" required ng-model="comentarios" placeholder="Ingrese los comentarios">
     </div>
-</div>
+    <div class="form-group">
+        <label for="horaNueva">Hora</label>
+        <select class="form-control" id="horaNueva" required ng-model="horaNueva">
+            <option ng-repeat="hora in horas" value={{hora}}>{{hora.horaInicio}}-{{hora.horaFin}} </option>
+        </select>
+    </div>
+    <input ng-show="cita.$valid" type="submit" value="Save" class="btn btn-success"/>
+    <button type="reset" class="btn btn-info">Reiniciar</button>
+    <a class="btn btn-danger" ui-sref="citasList"> Cancelar </a>
 
-
+</form>
