--- a/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/create/ordenesMedicas.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/create/ordenesMedicas.create.html
@@ -19,8 +19,8 @@
                     <div class="form-group row">
                         <div class="form-group col-sm-12">
                             <input ng-show="ordenMedica.$valid" type="submit" value="Guardar" class="btn btn-success"/>
-                            <a ng-if="!edit" class="btn btn-info" ui-sref="ordenesMedicasList">Cancelar</a>
-                            <a ng-if="edit" class="btn btn-info" ui-sref="ordenesMedicasList">Cancelar</a>
+                            <a ng-if="!edit" class="btn btn-info" ui-sref="'citasDetail({citasId: citaParaOrdenId})'">Cancelar</a>
+                            <a ng-if="edit" class="btn btn-info" ui-sref="'citasDetail({citasId: citaParaOrdenId})'">Cancelar</a>
                         </div>
                     </div>
                 </form>
