--- a/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/delete/ordenesMedicas.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/ordenesMedicas/delete/ordenesMedicas.delete.html
@@ -2,5 +2,5 @@
 <div class="center-block well text-center">
     <h1>¿Está seguro que quiere eliminar esta orden?</h1>
     <button id="confirm-delete" ng-click="deleteOrden()" class="btn btn-danger">Borrar</button>
-    <a id="cancel-delete" ui-sref="citasList" class="btn btn-info">Cancelar</a>
+    <a id="cancel-delete" ui-sref="citasDetail({citasId: citaParaOrdenId})" class="btn btn-info">Cancelar</a>
 </div>
